tests/test_arithmetic/bad/division_by_zero.catala_en
## `Division_by_zero` exception management

### with integers

```catala
declaration scope Int:
  context i content integer

scope Int:
  definition i equals 1 / 0
```

### with decimals

```catala
declaration scope Dec:
  context i content decimal

scope Dec:
  definition i equals 1. /. 0.
```

### with money

```catala
declaration scope Money:
  context i content decimal

scope Money:
  definition i equals $10.0 /$ $0.0
```


```catala-test {id="Dec.Interpret"}
catala Interpret -s Dec
```

```catala-test {id="Int.Interpret"}
catala Interpret -s Int
```

```catala-test {id="Money.Interpret"}
catala Interpret -s Money
```
